--- a/lib/assets/variables.css
+++ b/lib/assets/variables.css
@@ -2,4 +2,5 @@
   --vsdp-primary-color: linear-gradient(to right, #e0caca, #d4b8ca, #c7a3b5);
   --vsdp-secondary-color: #77505e;
   --vsdp-accent-color: pink;
+  --vsdp-primary-text: #77505e;
 }
